<resources>
    <string name="app_name">BookApp</string>
    <string name="main_msg">My First Book For</string>
    <string name="title">ABC</string>
    <string name="start_btn">Start</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>

    <string name="apple">A for Apple</string>
    <string name="bat">B for Bat</string>
    <string name="cap">C for Cap</string>
    <string name="drum">D for Drum</string>
    <string name="egg">E for Egg</string>
    <string name="flower">F for Flower</string>
    <string name="gun">G for Gun</string>
    <string name="hat">H for Hat</string>
    <string name="ice">I for Ice-Cream</string>
    <string name="jug">J for Jug</string>
    <string name="kite">K for Kite</string>
    <string name="leaf">L for Leaf</string>
    <string name="moon">M for Moon</string>
    <string name="nest">N for Nest</string>
    <string name="orange">O for Orange</string>
    <string name="pen">P for Pen</string>
    <string name="quiz">Q for Quiz</string>
    <string name="rainbow">R for Rainbow</string>
    <string name="star">S for Star</string>
    <string name="tree">T for Tree</string>
    <string name="umbrella">U for Umbrella</string>
    <string name="van">V for Van</string>
    <string name="melon">W for Water-Melon</string>
    <string name="xylo">X for XyloPhone</string>
    <string name="yoyo">Y for Yoyo</string>
    <string name="zebra">Z for Zebra</string>



    <string name="author">Author:   Rasaal Ahmad</string>
    <string name="rollnumber">Roll#:   19L-0925</string>




    <string name="next_msg">Next</string>
</resources>